pkg/generator/testdata/golden/with-custom-istio.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  labels:
    app.kubernetes.io/managed-by: bigbang-operator
    bigbang.dev/package: example-app
  name: default-peer-auth
  namespace: example-app
  ownerReferences:
  - apiVersion: bigbang.dev/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: Package
    name: example-app
    uid: 11111111-1111-1111-1111-111111111111
spec:
  mtls:
    mode: STRICT
status: {}
---
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  labels:
    app.kubernetes.io/managed-by: bigbang-operator
    bigbang.dev/package: example-app
    tier: edge
  name: external-https
  namespace: example-app
  ownerReferences:
  - apiVersion: bigbang.dev/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: Package
    name: example-app
    uid: 11111111-1111-1111-1111-111111111111
spec:
  hosts:
  - api.example.com
  ports:
  - name: https
    number: 443
    protocol: TLS
  resolution: DNS
status: {}
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  annotations:
    origin: legal
  labels:
    app.kubernetes.io/managed-by: bigbang-operator
    bigbang.dev/package: example-app
  name: deny-from-foo
  namespace: example-app
  ownerReferences:
  - apiVersion: bigbang.dev/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: Package
    name: example-app
    uid: 11111111-1111-1111-1111-111111111111
spec:
  action: DENY
  rules:
  - from:
    - source:
        namespaces:
        - foo
status: {}
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: bigbang-operator
    bigbang.dev/package: example-app
  name: scoped-deny-override
  namespace: example-app
  ownerReferences:
  - apiVersion: bigbang.dev/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: Package
    name: example-app
    uid: 11111111-1111-1111-1111-111111111111
spec:
  action: DENY
  rules:
  - to:
    - operation:
        methods:
        - DELETE
  selector:
    matchLabels:
      app.kubernetes.io/name: example-app
status: {}
